# mze

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.python  Makefile  check.sh  mze.rst  run.sh  rustfmt.toml  setup.cfg
cicd/: .pypirc.local.envsubst  check.sh  env.local.list  pip.conf.local.envsubst
client/cli/: mze
compose/check/: docker-compose.yml
compose/dev/: .env  docker-compose.yml
doc/: cicd.rst  decision-log.rst  todo.rst
doc/decisions/: 0000-template.rst  0001-doc-decisions-format.rst  0002-license.rst
mvp/: default1.conf  docker-compose.yml  mze
proxy/nginx/: default.conf
record-server/file-on-ss/: main.py  rs-file-on-ss-1.nginx.conf
src/: app.rs  container.rs  helpers.rs  lib.rs  main.rs  renderer.rs  search.rs  search_query.rs
src/container/: ram.rs  sqlite.rs
src/mze/: __init__.py  __main__.py
src/mze/api/: __init__.py  cli.py  kvdb.py  record.py  service.py  service_http.py  storage.py  storage_server.py  store.py
src/mze/api/test/: __init__.py  record.py  storage.py  store.py
src/mze/record/: sqlite.py
src/mze/record/test/: __init__.py  sqlite.py
src/mze/storage/: combinations.py  dir.py  http.py
src/mze/storage/test/: __init__.py  dir.py
src/mze/storage_server/: dir.py
src/mze/storage_server/test/: dir.py
src/mze/test/: __init__.py
src/renderer/: web.rs
src/renderer/web/: files.rs  search.css  search.html  search.js  search_result_record.html
storage-server/dir/: Dockerfile  main.py  run.sh  ss-dir-1.nginx.conf  ss-dir-2.nginx.conf
test/: 00-docker  01-docker  02-flake8  03-mypy  04-build  05-upload-local  10-install  20-unit  smoke
test/common/: common.py
