[package]
name = "mze"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
clap = { version = "4.5.23", features = ["derive"] }
color-backtrace = "0.6.1"
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4.22"
mime = "0.3.17"
rand = "0.8.5"
rand_core = "0.6.4"
rand_pcg = "0.3.1"
rusqlite = "0.32.1"
serde = { version = "1.0.217", features = ["derive"] }
tera = { version = "1", default-features = false }
thiserror = "2.0.9"
tokio = { version = "1", features = ["full"] }
