[metadata]
name = mze
version = 0.0.1
author = Maksym Medvied
author_email = maksym.medvied@gmail.com
description = Medvied Zettelkasten
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/medvied/mze
project_urls =
    Bug Tracker = https://github.com/medvied/mze/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
